[package]
name = "snapchain"
version = "0.1.0"
edition = "2021"

[lib]
name = "snapchain"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.6"
tonic = "0.12.3"
prost = "0.13.3"
futures = "0.3.28"
parking_lot = "0.12.1"
clap = { version = "4.3.0", features = ["derive"] }
libp2p = { version = "0.54.1", features = ["tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
async-trait = "0.1.68"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
hex = "0.4.3"
ractor = "0.11.2"
malachite-consensus = { path = "../malachite/code/crates/consensus" }
malachite-common = { path = "../malachite/code/crates/common" }
malachite-config = { path = "../malachite/code/crates/config" }
malachite-node = { path = "../malachite/code/crates/node" }
malachite-metrics = { path = "../malachite/code/crates/metrics" }
blake3 = "1.4.1"

tracing = "0.1.40"
thiserror = "1.0.66"
reqwest = { version = "0.12.9", features = ["json"] }
figment = { version = "0.10.19", features = ["env", "toml"] }


[build-dependencies]
tonic-build = "0.9.2"

[dev-dependencies]
serial_test = "3.1.1"
tempfile = "3.13.0"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
