[package]
name = "snapchain"
version = "0.1.0"
edition = "2021"
default-run = "snapchain"

[lib]
name = "snapchain"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.6"
tonic = "0.12.3"
prost = "0.13.3"
futures = "0.3.28"
futures-core = "0.3.31"
parking_lot = "0.12.1"
clap = { version = "4.3.0", features = ["derive"] }
libp2p = { version = "0.54.1", features = ["tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
async-trait = "0.1.68"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
hex = "0.4.3"
ractor = "0.11.2"
malachite-consensus = { path = "../malachite/code/crates/consensus" }
malachite-common = { path = "../malachite/code/crates/common" }
malachite-config = { path = "../malachite/code/crates/config" }
malachite-node = { path = "../malachite/code/crates/node" }
malachite-metrics = { path = "../malachite/code/crates/metrics" }
blake3 = "1.4.1"
tracing = "0.1.40"
thiserror = "1.0.66"
reqwest = { version = "0.12.9", features = ["json"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
futures-util = "0.3.31"
url = "2.5.3"
alloy-transport = "0.8.0"
alloy-transport-http = "0.8.0"
alloy-sol-types = { version = "0.8.15", features = ["json"] }
alloy-provider = "0.8.0"
alloy-rpc-types = "0.8.0"
alloy-primitives = "0.8.14"
alloy-contract = "0.8.0"
ed25519-dalek = "2.1.1"
pre-commit = "0.5.2"
rocksdb = {git = "https://github.com/rust-rocksdb/rust-rocksdb.git", rev="1cf906dc4087f06631820f13855e6b27bd21b972", features=["multi-threaded-cf"]}
walkdir = "2.5.0"
once_cell = "1.20.2"
threadpool = "1.8.1"
rand = "0.8.5"
humantime-serde = "1.1.1"
humantime = "2.1.0"
itertools = "0.13.0"
cadence = "1.5.0"
tempfile = "3.13.0"
foundry-common = { git = "https://github.com/foundry-rs/foundry", rev="6b07c77eb1c1d1c4b56ffa7f79240254b73236d2" }

[build-dependencies]
tonic-build = "0.9.2"

[dev-dependencies]
serial_test = "3.1.1"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }

[package.metadata.precommit]
fmt = "cargo fmt --check --quiet"
